fix: resolve majority of Error Prone errors and warnings introduced by static analysis